# palimind

./: .gitignore  README.md  pyproject.toml
core/: chunker.py  cli.py  config.py  embedder.py  responder.py  searcher.py  store.py  walker.py
palimind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
