[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "palimind"
version = "0.1.0"
description = "Local RAG CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.scripts]
palimind = "core.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
